--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 <body>
     <!-- Contenedor del juego -->
     <div class="game-container" id="gameContainer">
-        <embed src="Angry-Duck-Bomber-4" id="gameEmbed" width="100%" height="100%">
+        <embed src="Angry-Duck-Bomber-4.swf" id="gameEmbed" width="100%" height="100%">
 </body>
 </html>
